Update testcase